k8s/ingress/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api
  annotations:
    konghq.com/plugins: medikong-correlation-id,medikong-prometheus
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
